we need a reference to the DifParser.aData, fdo#64920

regression from 6191fa0847ac5b27083efe1a8c6cd84d080a638c

Change-Id: If7fc18e7d0bcbf1075a0ecdb1c0dcf3d207f1bda